--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,10 @@ body {
   font-family: t.$font-ui;
   font-size: t.$text-base;
   font-weight: 400;
+  line-height: 1.5;
   color: var(--text-primary);
   background-color: var(--surface-0);
-  transition: background-color var(--duration-normal) var(--ease), color var(--duration-normal) var(--ease);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
